# MedCrux

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANUAL_START.md  QUICKSTART.md  QUICK_TEST.md  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt  test_local.sh
docs/: PROJECT_STRUCTURE.md
frontend/: README.md  index.html  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AbnormalFindings.tsx  AnalysisStatus.tsx  BreastDiagram.tsx  Disclaimer.tsx  FileUpload.tsx  Footer.tsx  ImageDisplay.tsx  LoadingSpinner.tsx  Logo.tsx  Navbar.tsx  OverallAssessment.tsx  PatientEducationModal.tsx  PrivacyModal.tsx
frontend/src/services/: api.ts
scripts/: extract_rag_data.py  measure_coverage.py  measure_coverage.sh  start_api.sh  start_frontend.sh  start_ui.sh  test_e2e.sh  test_local.sh
src/frontend/: .eslintrc.cjs  package-lock.json  package.json
src/frontend/src/: App.tsx  index.css  types.ts
src/frontend/src/components/: AbnormalFindings.tsx  AnalysisStatus.tsx  BreastDiagram.tsx  Disclaimer.tsx  FileUpload.tsx  ImageDisplay.tsx  OverallAssessment.tsx  PatientEducationModal.tsx
src/frontend/src/pages/: AnalysisPage.tsx
src/frontend/src/services/: api.ts
src/medcrux/analysis/: llm_engine.py  report_structure_parser.py  risk_sign_identifier.py  risk_sign_samples.py
src/medcrux/api/: main.py
src/medcrux/ingestion/: ocr_service.py
src/medcrux/rag/: __init__.py  data_paths.py  graphrag_retriever.py  logical_consistency_checker.py
src/medcrux/rag/data/: README.md  breast_ultrasound_report_axioms.md  weak_evidence_chain.md
src/medcrux/ui/: app.py
src/medcrux/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_api.py  test_api_contract.py  test_api_contract_bl009.py  test_bl009.py  test_bl009_data_format.py  test_bl009_integration.py  test_bl009_performance.py  test_bl009_real_llm.py  test_bl010_integration.py  test_bl010_risk_signs.py  test_clock_positions.py  test_data_integrity_bl009.py  test_document_parser.py  test_e2e_data_flow.py  test_edge_cases_automated.py  test_entity_extractor.py  test_functional_automated.py  test_graphrag_retriever.py  test_llm_engine.py  test_llm_engine_v1_1_0.py  test_llm_location_structured_output.py  test_logger.py  test_logical_consistency_checker.py  test_malignant_sign_striped_hypoechoic.py  test_ocr_service.py  test_performance.py  test_performance_automated.py  test_relation_extractor.py  test_report_structure_parser.py  test_report_structure_parser_multi_exam.py  test_ui_v1_1_0.py
(+197 files in other folders)
