[project]
name = "medcrux"
version = "1.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.127.0",
    "loguru>=0.7.3",
    "openai>=2.14.0",
    "opencv-python-headless>=4.12.0.88",
    "pydantic>=2.12.5",
    "rapidocr-onnxruntime>=1.4.4",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "plotly>=5.24.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.10",
]

# --- Ruff Configuration (替代 Black, Isort, Flake8) ---
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# 启用规则: E(pycodestyle), F(pyflakes), I(isort), B(bugbear), UP(pyupgrade)
select = ["E", "F", "I", "B", "UP"]
ignore = ["F811","B008"]


# 自动修复 imports 排序
[tool.ruff.lint.isort]
known-first-party = ["medcrux"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
