[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medcrux"
version = "1.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.127.0",
    "httpx[socks]>=0.27.0",
    "loguru>=0.7.3",
    "openai>=2.14.0",
    "opencv-python-headless>=4.12.0.88",
    "pydantic>=2.12.5",
    "rapidocr-onnxruntime>=1.4.4",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "plotly>=5.24.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medcrux"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.10",
]

# --- Ruff Configuration (替代 Black, Isort, Flake8) ---
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# 启用规则: 基于Google Python Style Guide
# E(pycodestyle), F(pyflakes), I(isort), B(bugbear), UP(pyupgrade)
# SIM(flake8-simplify), PIE(flake8-pie), PL(Pylint), TRY(tryceratops), RUF(Ruff特定规则)
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear (常见bug检测)
    "UP",     # pyupgrade (代码现代化)
    "SIM",    # flake8-simplify (简化代码)
    "PIE",    # flake8-pie (代码质量)
    "PL",     # Pylint规则
    "TRY",    # tryceratops (异常处理最佳实践)
    "RUF",    # Ruff特定规则
]
ignore = [
    "F811",   # 允许重复导入（某些场景需要）
    "B008",   # 允许函数参数默认值
]


# 自动修复 imports 排序
[tool.ruff.lint.isort]
known-first-party = ["medcrux"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
